--- a/public/src/Footer/_footer.scss
+++ b/public/src/Footer/_footer.scss
@@ -1,3 +1,8 @@
+ul#footer-nav li {
+  display:inline-block;
+  *display:inline;
+}
+
 ul#social-media li {
     display:inline-block;
     *display:inline;
