--- a/public/src/Footer/_footer.scss
+++ b/public/src/Footer/_footer.scss
@@ -1,10 +1,12 @@
-@media screen and (max-width: 1169px) {
+@media screen and (max-width: 800px) {
   #footer {
-    height: 0px;
+    display: none;
   }
 }
 
 #footer {
+  padding: 10px;
+  padding-bottom: 0;
   width: 100%;
   bottom: 0px;
   background-color: rgb(65, 206, 206);
@@ -21,6 +23,7 @@
 
 #footer-line-break {
   margin: auto;
+  margin-bottom: 10px;
   height: 2px;
   width: 80%;
   background-color: rgb(49, 49, 49);
