--- a/public/src/_variables_&_mixins.scss
+++ b/public/src/_variables_&_mixins.scss
@@ -5,3 +5,9 @@ $secondaryColor: #006198;
 
 
 //Mixins
+@mixin flexCenter($direction) {
+  display: flex;
+  flex-direction: $direction;
+  justify-content: center;
+  align-items: center;
+}
