--- a/public/src/Header/_Header.scss
+++ b/public/src/Header/_Header.scss
@@ -38,7 +38,29 @@
 
 .mobile-search-form {
   display: none;
-  width: 250px;
+  height: 50px;
+}
+
+.mobile-search-field {
+  width: 245px;
+}
+
+.mobile-search-close {
+  position: absolute;
+  top: 10px;
+  right: 12px;
+  border: none;
+  padding: 1px 4px;
+  background-color: $mainColor;
+}
+
+.mobile-search-submit {
+  position: absolute;
+  top: 10px;
+  right: 38px;
+  border: none;
+  padding: 1px 4px;
+  background-color: $mainColor;
 }
 
 .mobile-logo {
