--- a/public/src/App.scss
+++ b/public/src/App.scss
@@ -4,11 +4,30 @@
 // Import Bootstrap and its default variables
 @import '~bootstrap/scss/bootstrap.scss';
 @import "variables_&_mixins";
-@import '/Header/_Header.scss';
 
 
-.App {
-    text-align: center;
+@import 'components/Header/_Header.scss';
+@import 'components/Footer/_Footer.scss';
+
+
+html, body {
+    height: 100%;
 }
 
+#root {
+    height: 100%;
+}
 
+.App {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.app-main {
+    flex: 1 0 auto;
+}
+
+.app-footer {
+    flex-shrink: 0;
+}
