--- a/public/src/components/Header/_Header.scss
+++ b/public/src/components/Header/_Header.scss
@@ -1,3 +1,4 @@
+/* ====================== Mobile styles ========================== */
 .mobile-header {
   background-color: $secondaryColor;
   color: $mainColor ;
@@ -7,7 +8,7 @@
   justify-content: space-between;
   font-size: 25px;
   padding: 5px;
-  border-bottom: #01adef 5px solid;
+  border-bottom: $highlightColor 5px solid;
 }
 
 .left-wrapper {
@@ -77,4 +78,57 @@
 
 .mobile-search {
   margin-left: 10px;
+}
+
+/* ====================== Desktop Only (Overrides Mobile and Tablet Styles) ========================== */
+@media only screen and (min-width: 1200px) {
+  .desktop-header {
+    background-color: $secondaryColor;
+    color: $mainColor;
+    font-size: 22px;
+    .logo img{
+      width: 80%;
+    }
+    span {
+      padding: 10px 20px;
+    }
+    a {
+      margin: 10px;
+    }
+    a:hover{
+     border-bottom: 2px solid;
+    }
+    .desktop-nav {
+      border-top: 1px solid $highlightColor;
+      padding-top: 10px;
+      ul {
+        list-style-type: none;
+        padding-left: 0px;
+        li {
+        display: inline-block;
+          form {
+            position: relative;
+          }
+          button {
+            position: absolute;
+            top: 1px;
+            right: 0px;
+          }
+        }
+      }
+    }
+  }
+
+  .v-align {
+    @include flexCenter(row);
+    justify-content: flex-start;
+  }
+
+  .mobile-header {
+    display: none;
+  }
+
+  .mobile-nav {
+    display: none;
+  }
 }
