apply sass variables and update footer css

--- a/public/src/components/Footer/_Footer.scss
+++ b/public/src/components/Footer/_Footer.scss
@@ -1,23 +1,16 @@
-@media screen and (max-width: 800px) {
-  #footer {
-    display: none;
-  }
-}
-
 #footer {
-  padding: 10px;
+  background-color: $secondaryColor;
+  color: $mainColor;
+  text-align: center;
+  padding: 5px;
   padding-bottom: 0;
   width: 100%;
   bottom: 0px;
-  background-color: rgb(65, 206, 206);
+  border-top:  #01adef 5px solid;
 
-  p {
-    color: rgb(49, 49, 49);
+  p a {
+    color: $mainColor;
     font-size: 18px;
-  }
-
-  a {
-    color: rgb(49, 49, 49);
   }
 }
 
@@ -26,5 +19,6 @@
   margin-bottom: 10px;
   height: 2px;
   width: 80%;
-  background-color: rgb(49, 49, 49);
+  background-color:  #01adef;
+
 }
