Desktop header outline

--- a/public/src/components/Header/_Header.scss
+++ b/public/src/components/Header/_Header.scss
@@ -79,6 +79,9 @@
 .mobile-search {
   margin-left: 10px;
 }
+//.desktop-header {
+//  display: none;
+//}
 
 /* ====================== Desktop Only (Overrides Mobile and Tablet Styles) ========================== */
 @media only screen and (min-width: 1200px) {
