Adding connection to vendure and showing example

--- a/public/src/components/Footer/_Footer.scss
+++ b/public/src/components/Footer/_Footer.scss
@@ -1,24 +1,30 @@
 #footer {
-  background-color: $secondaryColor;
-  color: $mainColor;
-  text-align: center;
-  padding: 5px;
-  padding-bottom: 0;
-  width: 100%;
-  bottom: 0px;
-  border-top:  #01adef 5px solid;
-
-  p a {
+    background-color: $secondaryColor;
     color: $mainColor;
-    font-size: 18px;
-  }
+    text-align: center;
+    padding: 5px;
+    padding-bottom: 0;
+    width: 100%;
+    bottom: 0px;
+    border-top: #01adef 5px solid;
+
+    p a {
+        color: $mainColor;
+        font-size: 18px;
+    }
 }
 
 #footer-line-break {
-  margin: auto;
-  margin-bottom: 10px;
-  height: 2px;
-  width: 80%;
-  background-color:  #01adef;
+    margin: auto;
+    margin-bottom: 10px;
+    height: 2px;
+    width: 80%;
+    background-color: #01adef;
 
+}
+
+.footer-icon {
+    font-size: 30px;
+    margin: 0 5px 5px;
+    color: #ffffff;
 }
