--- a/public/src/App.scss
+++ b/public/src/App.scss
@@ -10,6 +10,9 @@
 @import 'components/Footer/_Footer.scss';
 
 
+@import 'components/Shop/_Shop.scss';
+@import 'components/Category/_Category.scss';
+
 html, body {
     height: 100%;
 }
