--- a/public/src/App.scss
+++ b/public/src/App.scss
@@ -3,7 +3,7 @@
 
 // Import Bootstrap and its default variables
 @import '~bootstrap/scss/bootstrap.scss';
-@import "variables_&_mixins";
+@import "variables-and-mixins";
 
 
 @import 'components/Header/_Header.scss';
