added the new Spinner component which pulls in the loader based on if the parent page is loaded or not -- however, right now its not quite working right

--- a/public/src/App.scss
+++ b/public/src/App.scss
@@ -12,6 +12,7 @@
 
 @import 'components/Shop/_Shop.scss';
 @import 'components/Category/_Category.scss';
+@import 'components/Spinner/_Spinner.scss';
 
 html, body {
     height: 100%;
@@ -35,8 +36,4 @@ html, body {
     flex-shrink: 0;
 }
 
-.loader {
-    @include flexCenter(row);
-    width: 100%;
-    padding-top: 40px;
-}
+
