Added the contact page

--- a/public/src/App.scss
+++ b/public/src/App.scss
@@ -13,6 +13,7 @@
 @import 'components/Shop/_Shop.scss';
 @import 'components/Category/_Category.scss';
 @import 'components/Spinner/_Spinner.scss';
+@import 'components/Contact/_Contact.scss';
 
 html, body {
     height: 100%;
